--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cbor": "^5.0.2",
     "esm": "^3.2.22",
     "js-base64": "^3.0.2",
+    "uuid": "^8.3.1",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
